force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Agreement__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Echosign_Recipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>