force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Contact__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EchoSign Recipients</relationshipLabel>
    <relationshipName>Echosign_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>