force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Date_Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Date_Time_Completed__c</fullName>
    <label>Date/Time Completed</label>
    <type>DateTime</type>
</CustomField>