force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__First_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>