force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__KBA_Name_Required__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__KBA_Name_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want recipient name required.</description>
    <inlineHelpText>Check this box if you want recipient name required.</inlineHelpText>
    <label>Require Recipient Name</label>
    <type>Checkbox</type>
</CustomField>