force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Order_Number__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Order_Number__c</fullName>
    <label>Order Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>