force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__ParticipantSet__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__ParticipantSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParticipantSet</label>
    <referenceTo>echosign_dev1__ParticipantSet__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Participants</relationshipName>
    <type>Lookup</type>
</CustomField>