force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Person_Account__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Echosign_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>