force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Provider_ID__c</fullName>
    <description>Label for selected DIG provider value</description>
    <inlineHelpText>Label for selected DIG provider value</inlineHelpText>
    <label>Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>