force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Recipient_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Role__c</fullName>
    <label>Recipient Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signer</fullName>
                <default>true</default>
                <label>Signer</label>
            </value>
            <value>
                <fullName>Approver</fullName>
            </value>
            <value>
                <fullName>Acceptor</fullName>
            </value>
            <value>
                <fullName>Form Filler</fullName>
            </value>
            <value>
                <fullName>Certified Recipient</fullName>
            </value>
            <value>
                <fullName>Delegate to Signer</fullName>
            </value>
            <value>
                <fullName>Delegate to Approver</fullName>
            </value>
            <value>
                <fullName>Delegate to Acceptor</fullName>
            </value>
            <value>
                <fullName>Delegate to Form Filler</fullName>
            </value>
            <value>
                <fullName>Delegate to Certified Recipient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>