force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Recipient_Type__c</fullName>
    <description>Stores the Type of the Recipient</description>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>