force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Signer_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Signer_Verification_Method__c</fullName>
    <label>Signer Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email OTP</fullName>
            </value>
            <value>
                <fullName>Password</fullName>
            </value>
            <value>
                <fullName>KBA</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Government ID</fullName>
            </value>
            <value>
                <fullName>Acrobat Sign</fullName>
            </value>
            <value>
                <fullName>Digital Identity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>