force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Source_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Source_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Recipient</label>
    <referenceTo>echosign_dev1__SIGN_Recipients__c</referenceTo>
    <relationshipLabel>Alternate Recipients</relationshipLabel>
    <relationshipName>Alternate_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>