force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__Status__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Delegated</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Form-Filled</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Waiting for Acceptance</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for Authoring</fullName>
            </value>
            <value>
                <fullName>Waiting for Delegation</fullName>
            </value>
            <value>
                <fullName>Waiting for Delivery</fullName>
            </value>
            <value>
                <fullName>Waiting for Faxin</fullName>
            </value>
            <value>
                <fullName>Waiting for Form-Filling</fullName>
            </value>
            <value>
                <fullName>Waiting for Review</fullName>
            </value>
            <value>
                <fullName>Waiting for Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>