force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__useEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__useEmailAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>useEmailAddress</label>
    <type>Checkbox</type>
</CustomField>