force-app/main/default/objects/echosign_dev1__SIGN_Recipients__c/fields/echosign_dev1__User__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Echosign_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>